--- a/eureka-microservice-dev.properties
+++ b/eureka-microservice-dev.properties
@@ -3,4 +3,4 @@ server.port=8761
 eureka.cliente.fetch.registrey=false
 eureka.client.register-with-eureka=false
 eureka.client.eureka-server-u-r-l-context=http://localhost:8761/eureka
-eureka.instance.hostname=localhost
+eureka.instance.hostname=192.168.1.171
