--- a/eureka-microservice-dev.properties
+++ b/eureka-microservice-dev.properties
@@ -2,5 +2,5 @@ booking.property=eureka Profile Dev
 server.port=8761
 eureka.cliente.fetch.registrey=false
 eureka.client.register-with-eureka=false
-eureka.client.eureka-server-u-r-l-context=http://localhost:8761/eureka
+eureka.client.eureka-server-u-r-l-context=http://192.168.1.171:8761/eureka
 eureka.instance.hostname=192.168.1.171
