--- a/auth-microservice.yaml
+++ b/auth-microservice.yaml
@@ -8,6 +8,8 @@ eureka:
       default-zone:  http://192.168.1.171/eureka-microservice
       instance:
         hostname: 192.168.1.171
+  instance:
+    instance-id: ${spring.application.name}:${random.uuid}        
 
 spring:
   datasource:
