--- a/auth-microservice.yaml
+++ b/auth-microservice.yaml
@@ -13,7 +13,7 @@ eureka:
 
 spring:
   datasource:
-    url: jdbc:mysql://localhost:3606/auth-microservice
+    url: jdbc:mysql://192.168.1.171:3606/auth-microservice
     username: root
     password: 
   jpa:
