--- a/auth-microservice.yaml
+++ b/auth-microservice.yaml
@@ -15,7 +15,7 @@ spring:
   datasource:
     url: jdbc:mysql://192.168.1.171:3306/auth-microservice
     username: root
-    password: 
+    password: admin
   jpa:
     hibernate.ddl-auto: update
     generate-ddl: true
