--- a/auth-microservice.yaml
+++ b/auth-microservice.yaml
@@ -5,7 +5,7 @@ eureka:
     fetch-registry: true
     register-with-eureka: true
     service-url:
-      default-zone:  http://192.168.1.171/eureka-microservice
+      default-zone: http://192.168.1.171/eureka-microservice
       instance:
         hostname: 192.168.1.171
   instance:
@@ -13,10 +13,13 @@ eureka:
 
 spring:
   datasource:
-    url: jdbc:mysql://192.168.1.171:3306/auth-microservice
+    url: jdbc:mysql://localhost:3306/auth_microservice
     username: root
     password: admin
   jpa:
+    properties:
+      hibernate:
+        dialect: org.hibernate.dialect.MySQL8Dialect
     hibernate.ddl-auto: update
     generate-ddl: true
     show-sql: true   
