--- a/auth-microservice.yaml
+++ b/auth-microservice.yaml
@@ -15,7 +15,7 @@ spring:
   datasource:
     url: jdbc:mysql://localhost:3306/auth_microservice
     username: root
-    password: admin
+    password: 
   jpa:
     properties:
       hibernate:
