--- a/auth-microservice.yaml
+++ b/auth-microservice.yaml
@@ -7,9 +7,7 @@ eureka:
     service-url:
       default-zone: http://192.168.1.171/eureka-microservice
       instance:
-        hostname: 192.168.1.171
-  instance:
-    instance-id: ${spring.application.name}:${random.uuid}        
+        hostname: localhost
 
 spring:
   datasource:
