--- a/auth-microservice.yaml
+++ b/auth-microservice.yaml
@@ -5,7 +5,7 @@ eureka:
     fetch-registry: true
     register-with-eureka: true
     service-url:
-      default-zone: http://192.168.1.171/eureka-microservice
+      default-zone: http://localhost:8761/eureka
       instance:
         hostname: localhost
 
