--- a/auth-microservice.yaml
+++ b/auth-microservice.yaml
@@ -5,9 +5,9 @@ eureka:
     fetch-registry: true
     register-with-eureka: true
     service-url:
-      default-zone: http://localhost:8761/eureka
+      default-zone: http://192.168.1.171/eureka
       instance:
-        hostname: localhost
+        hostname: 192.168.1.171
 
 spring:
   datasource:
