--- a/auth-microservice.yaml
+++ b/auth-microservice.yaml
@@ -4,10 +4,8 @@ eureka:
   client:
     fetch-registry: true
     register-with-eureka: true  
-    service-url:
-      default-zone: http://localhost:8761/eureka/
-      instance:
-        hostname: localhost
+    eureka-server-u-r-l-context: http://localhost:8761/eureka
+  instance.hostname: localhost  
 
 spring:
   datasource:
