--- a/auth-microservice.yaml
+++ b/auth-microservice.yaml
@@ -5,7 +5,8 @@ eureka:
     fetch-registry: true
     register-with-eureka: true  
     eureka-server-u-r-l-context: http://localhost:8761/eureka
-  instance.hostname: localhost  
+  instance:
+    hostname: localhost  
 
 spring:
   datasource:
