--- a/auth-microservice.yaml
+++ b/auth-microservice.yaml
@@ -4,9 +4,9 @@ eureka:
   client:
     fetch-registry: true
     register-with-eureka: true  
-    eureka-server-u-r-l-context: http://localhost:8761/eureka/
+    eureka-server-u-r-l-context: http://192.168.1.171/eureka
   instance:
-    hostname: localhost  
+    hostname: 192.168.1.171  
 
 spring:
   datasource:
