--- a/auth-microservice.yaml
+++ b/auth-microservice.yaml
@@ -10,7 +10,7 @@ eureka:
 
 spring:
   datasource:
-    url: jdbc:mysql://localhost:3306/auth_microservice
+    url: jdbc:mysql://localhost:3306/auth-microservice
     username: root
     password: 
   jpa:
