--- a/auth-microservice.yaml
+++ b/auth-microservice.yaml
@@ -12,7 +12,7 @@ spring:
   datasource:
     url: jdbc:mysql://localhost:3306/auth-microservice
     username: root
-    password: admin
+    password: 
   jpa:
     properties:
       hibernate:
