--- a/auth-microservice.yaml
+++ b/auth-microservice.yaml
@@ -6,7 +6,7 @@ eureka:
     register-with-eureka: true  
     eureka-server-u-r-l-context: http://192.168.1.34:8761/eureka
   instance:
-    hostname: 192.168.1.34  
+    hostname: localhost  
 
 spring:
   datasource:
