--- a/eureka-microservice.yaml
+++ b/eureka-microservice.yaml
@@ -3,4 +3,8 @@ server:
 eureka:
   client:
     fetch-registry: false
-    register-with-eureka: false  
+    register-with-eureka: false
+    serviceUrl:
+      default-zone: http://192.168.1.34:8761/eureka
+server:
+    waitTimeInMsWhenSyncEmpty: 0 
