--- a/auth-microservice.yaml
+++ b/auth-microservice.yaml
@@ -1,10 +1,8 @@
-server:
-  port: 8001
 eureka:
   client:
     fetch-registry: true
     register-with-eureka: true  
-    eureka-server-u-r-l-context: http://192.168.1.34:8761/eureka
+    eureka-server-u-r-l-context: http://192.168.1.171/eureka-microservice/eureka
   instance:
     hostname: localhost  
 
