--- a/auth-microservice.yaml
+++ b/auth-microservice.yaml
@@ -2,7 +2,7 @@ eureka:
   client:
     fetch-registry: true
     register-with-eureka: true  
-    eureka-server-u-r-l-context: http://localhost:8761/eureka
+    eureka-server-u-r-l-context: http://localhost/eureka-microservice/eureka
   instance:
     hostname: localhost  
 
