--- a/auth-microservice.yaml
+++ b/auth-microservice.yaml
@@ -2,9 +2,9 @@ eureka:
   client:
     fetch-registry: true
     register-with-eureka: true  
-    eureka-server-u-r-l-context: http://localhost/eureka-microservice/eureka
+    eureka-server-u-r-l-context: http://192.168.1.171/eureka-microservice/eureka/
   instance:
-    hostname: localhost  
+    hostname: 192.168.1.171  
 
 spring:
   datasource:
