--- a/auth-microservice.yaml
+++ b/auth-microservice.yaml
@@ -2,7 +2,7 @@ eureka:
   client:
     fetch-registry: true
     register-with-eureka: true  
-    eureka-server-u-r-l-context: http://192.168.1.171/eureka-microservice/eureka/
+    eureka-server-u-r-l-context: http://192.168.1.171:80/eureka-microservice/eureka/
   instance:
     hostname: 192.168.1.171  
 
