--- a/auth-microservice.yaml
+++ b/auth-microservice.yaml
@@ -2,15 +2,15 @@ eureka:
   client:
     fetch-registry: true
     register-with-eureka: true  
-    eureka-server-u-r-l-context: http://192.168.1.171:80/eureka-microservice/eureka/
+    eureka-server-u-r-l-context: http://localhost:8761/eureka/
   instance:
-    hostname: 192.168.1.171  
+    hostname: localhost
 
 spring:
   datasource:
     url: jdbc:mysql://localhost:3306/auth-microservice
     username: root
-    password: admin
+    password: 
   jpa:
     properties:
       hibernate:
