--- a/api-gateway-microservice.yaml
+++ b/api-gateway-microservice.yaml
@@ -23,5 +23,6 @@ spring:
           uri: lb://user-microservice
           predicates:
             - Path=/api/v1/users/**
-          
+          filters: AuthFilter
+
               
