--- a/api-gateway-microservice.yaml
+++ b/api-gateway-microservice.yaml
@@ -22,7 +22,7 @@ spring:
         - id: user-microservice
           uri: lb://user-microservice
           predicates:
-            - Path=/api/v1/users/getUser/{username}
+            - Path=/api/v1/users/**
           filters: AuthFilter
 
               
