--- a/user-microservice.yaml
+++ b/user-microservice.yaml
@@ -2,9 +2,9 @@ server:
   port: 8002
 spring:
   datasource:
-    url: jdbc:mysql://mysql-server:3306/auth-microservice
+    url: jdbc:mysql://localhost:3306/auth-microservice
     username: root
-    password: root
+    password: 
   jpa:
     properties:
       hibernate:
