--- a/user-microservice.yaml
+++ b/user-microservice.yaml
@@ -2,9 +2,9 @@ server:
   port: 8002
 spring:
   datasource:
-    url: jdbc:mysql://localhost:3306/auth-microservice
+    url: jdbc:mysql://192.168.1.171:33061/auth-microservice
     username: root
-    password: 
+    password: root
   jpa:
     properties:
       hibernate:
