--- a/user-microservice.yaml
+++ b/user-microservice.yaml
@@ -13,5 +13,11 @@ spring:
     generate-ddl: true
     show-sql: true   
 
+eureka:
+  client:
+    enabled: true
+    serviceUrl:
+      defaultZone: http://eureka-microservice:8761
+
 jwt:
   secret: electrohogarl
