--- a/api-gateway-microservice.properties
+++ b/api-gateway-microservice.properties
@@ -4,6 +4,11 @@ eureka.client.register-with-eureka= true
 eureka.client.eureka-server-u-r-l-context= http://localhost:8761/eureka/
 eureka.instance.hostname= localhost
 
+spring.cloud.gateway.default-filters=DedupeResponseHeader=Access-Control-Allow-Origin Access-Control-Allow-Credentials, RETAIN_UNIQUE
+spring.cloud.gateway.globalcors.corsConfiguration.allowedOrigins="*"
+spring.cloud.gateway.globalcors.corsConfiguration.allowedHeaders="*"
+spring.cloud.gateway.globalcors.corsConfiguration.allowedMethods="*"
+
 spring.cloud.gateway.routes[0].id=user-microservice
 spring.cloud.gateway.routes[0].uri=lb://USER-MICROSERVICE
 spring.cloud.gateway.routes[0].predicates[0]=Path=/api/v1/users/**
