--- a/api-gateway-microservice.properties
+++ b/api-gateway-microservice.properties
@@ -4,6 +4,8 @@ eureka.client.register-with-eureka= true
 eureka.client.eureka-server-u-r-l-context= http://localhost:8761/eureka/
 eureka.instance.hostname= localhost
 
+spring.cloud.gateway.default-filters[0]=DedupeResponseHeader=Access-Control-Allow-Credentials Access-Control-Allow-Origin
+spring.cloud.gateway.default-filters[1]=AddResponseHeader=Access-Control-Allow-Origin, *
 
 spring.cloud.gateway.routes[0].id=user-microservice
 spring.cloud.gateway.routes[0].uri=lb://USER-MICROSERVICE
