--- a/api-gateway-microservice.properties
+++ b/api-gateway-microservice.properties
@@ -4,6 +4,15 @@ eureka.client.register-with-eureka= true
 eureka.client.eureka-server-u-r-l-context= http://localhost:8761/eureka/
 eureka.instance.hostname= localhost
 
+
+spring.cloud.gateway.globalcors.corsConfigurations.'[/**]'.allowedOrigins='*'
+spring.cloud.gateway.globalcors.corsConfigurations.'[/**]'.allowedHeaders=Content-Type
+spring.cloud.gateway.globalcors.corsConfigurations.'[/**]'.allowedMethods[0]=GET
+spring.cloud.gateway.globalcors.corsConfigurations.'[/**]'.allowedMethods[1]=POST
+spring.cloud.gateway.globalcors.corsConfigurations.'[/**]'.allowedMethods[2]=PUT
+spring.cloud.gateway.globalcors.corsConfigurations.'[/**]'.allowedMethods[3]=DELETE
+
+
 spring.cloud.gateway.routes[0].id=user-microservice
 spring.cloud.gateway.routes[0].uri=lb://USER-MICROSERVICE
 spring.cloud.gateway.routes[0].predicates[0]=Path=/api/v1/users/**
